@@ -19,11 +19,18 @@ import com.fpoly.webmusicai.entity.Order;
 import com.fpoly.webmusicai.entity.Song;
 import com.fpoly.webmusicai.entity.Tag;
 import com.fpoly.webmusicai.entity.User;
+import com.fpoly.webmusicai.entity.Role;
 import com.fpoly.webmusicai.repository.OrderRepository;
 import com.fpoly.webmusicai.repository.SongRepository;
 import com.fpoly.webmusicai.repository.SongTagRepository;
 import com.fpoly.webmusicai.repository.TagRepository;
 import com.fpoly.webmusicai.repository.UserRepository;
+import com.fpoly.webmusicai.repository.AuthorityRepository;
+import com.fpoly.webmusicai.repository.RoleRepository;
+import com.fpoly.webmusicai.service.PaymentCompletionResult;
+import com.fpoly.webmusicai.service.PaymentService;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 
 @RestController
 @RequestMapping("/api/admin")
@@ -31,6 +38,12 @@ public class AdminRestController {
 
     @Autowired
     private UserRepository userRepo;
+
+    @Autowired
+    private AuthorityRepository authorityRepo;
+
+    @Autowired
+    private RoleRepository roleRepo;
 
     @Autowired
     private SongRepository songRepo;
@@ -44,6 +57,9 @@ public class AdminRestController {
     @Autowired
     private SongTagRepository songTagRepo;
 
+    @Autowired
+    private PaymentService paymentService;
+
 
     // ============ QUẢN LÝ USER (đã có sẵn) ============
 
@@ -51,17 +67,24 @@ public class AdminRestController {
     public ResponseEntity<?> getUsers(
             @RequestParam(defaultValue = "0") int page,
             @RequestParam(defaultValue = "10") int size,
-            @RequestParam(defaultValue = "") String keyword) {
+            @RequestParam(defaultValue = "") String keyword,
+            @RequestParam(required = false) String tier,
+            @RequestParam(defaultValue = "ALL") String period,
+            @RequestParam(defaultValue = "ALL") String roleFilter,
+            @RequestParam(defaultValue = "newest") String tokenSort) {
 
-        Pageable pageable = PageRequest.of(page, size);
+        org.springframework.data.domain.Sort sort = switch (tokenSort) {
+            case "token_asc" -> org.springframework.data.domain.Sort.by("tokenBalance").ascending();
+            case "token_desc" -> org.springframework.data.domain.Sort.by("tokenBalance").descending();
+            default -> org.springframework.data.domain.Sort.by("createdAt").descending();
+        };
+        Pageable pageable = PageRequest.of(page, size, sort);
         Page<User> users;
-
-        if (keyword != null && !keyword.trim().isEmpty()) {
-            users = userRepo.findByUsernameContainingIgnoreCaseOrFullnameContainingIgnoreCase(
-                keyword.trim(), keyword.trim(), pageable);
-        } else {
-            users = userRepo.findAll(pageable);
-        }
+        Date[] bounds = getPeriodBounds(period);
+        users = userRepo.findForAdmin(
+                keyword == null || keyword.isBlank() ? null : keyword.trim(),
+                tier == null || tier.isBlank() ? null : tier.trim().toUpperCase(),
+                bounds[0], bounds[1], normalizeRoleFilter(roleFilter), pageable);
 
         List<Map<String, Object>> userMaps = users.getContent().stream().map(u -> {
             Map<String, Object> m = new HashMap<>();
@@ -73,6 +96,7 @@ public class AdminRestController {
             m.put("enabled", u.getEnabled());
             m.put("accountTier", u.getAccountTier());
             m.put("proExpiredAt", u.getProExpiredAt());
+            m.put("createdAt", u.getCreatedAt());
             boolean isAdmin = u.getAuthorities() != null &&
                 u.getAuthorities().stream().anyMatch(a -> a.getRole().getId().equals("ADMIN"));
             m.put("admin", isAdmin);
@@ -151,55 +175,138 @@ public class AdminRestController {
     @GetMapping("/orders")
     public ResponseEntity<?> getAllOrders(
             @RequestParam(defaultValue = "") String status,
+            @RequestParam(defaultValue = "ALL") String period,
             @RequestParam(required = false) String from,
-            @RequestParam(required = false) String to) {
+            @RequestParam(required = false) String to,
+            @RequestParam(defaultValue = "0") int page,
+            @RequestParam(defaultValue = "10") int size) {
+        Date[] bounds = resolveDateBounds(from, to, period);
+        String statusParam = (status != null && !status.isEmpty()) ? status : null;
+        Pageable pageable = PageRequest.of(page, size, org.springframework.data.domain.Sort.by("createdAt").descending());
+        return ResponseEntity.ok(orderRepo.findFiltered(bounds[0], bounds[1], statusParam, pageable));
+    }
 
+    /** Chỉ Admin hiện tại mới có thể cấp hoặc thu hồi quyền Admin của tài khoản khác. */
+    @PutMapping("/users/{username}/toggle-admin")
+    @Transactional
+    public ResponseEntity<?> toggleAdminRole(@PathVariable String username) {
+        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
+        if (auth != null && username.equals(auth.getName())) {
+            return ResponseEntity.badRequest().body(Map.of("message", "Không thể tự thay đổi quyền Admin của chính mình."));
+        }
+        User user = userRepo.findById(username).orElse(null);
+        if (user == null) return ResponseEntity.notFound().build();
+
+        var existing = authorityRepo.findByUserUsernameAndRoleId(username, "ADMIN");
+        if (existing.isPresent()) {
+            authorityRepo.delete(existing.get());
+            return ResponseEntity.ok(Map.of("message", "Đã thu hồi quyền Admin của " + username, "admin", false));
+        }
+
+        Role adminRole = roleRepo.findById("ADMIN").orElse(null);
+        if (adminRole == null) {
+            return ResponseEntity.badRequest().body(Map.of("message", "Chưa có role ADMIN trong cơ sở dữ liệu."));
+        }
+        Authority authority = new Authority();
+        authority.setUser(user);
+        authority.setRole(adminRole);
+        authorityRepo.save(authority);
+        return ResponseEntity.ok(Map.of("message", "Đã cấp quyền Admin cho " + username, "admin", true));
+    }
+
+    @PutMapping("/orders/{orderCode}/approve-review")
+    public ResponseEntity<?> approveReviewOrder(@PathVariable String orderCode) {
         try {
-            SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd");
-            Date fromDate = (from != null && !from.isEmpty()) ? sdf.parse(from) : null;
-            Date toDate = (to != null && !to.isEmpty()) ? new Date(sdf.parse(to).getTime() + 86400000L - 1) : null;
-            String statusParam = (status != null && !status.isEmpty()) ? status : null;
-
-            List<Order> orders = orderRepo.findFiltered(fromDate, toDate, statusParam);
-            return ResponseEntity.ok(orders);
-        } catch (Exception e) {
-            return ResponseEntity.badRequest().body(Map.of("error", "Định dạng ngày không hợp lệ (yyyy-MM-dd)"));
+            PaymentCompletionResult result = paymentService.approveReview(orderCode);
+            return ResponseEntity.ok(Map.of("status", result.status(), "message", result.message()));
+        } catch (IllegalArgumentException e) {
+            return ResponseEntity.notFound().build();
+        } catch (IllegalStateException e) {
+            return ResponseEntity.badRequest().body(Map.of("message", e.getMessage()));
         }
     }
     // ============ DOANH THU ============
 
     @GetMapping("/revenue")
     public ResponseEntity<?> getRevenue(
+            @RequestParam(defaultValue = "ALL") String period,
             @RequestParam(required = false) String from,
             @RequestParam(required = false) String to) {
 
         Map<String, Object> result = new HashMap<>();
 
-        try {
-            SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd");
-            Long totalRevenue;
-
-            if (from != null && !from.isEmpty() && to != null && !to.isEmpty()) {
-                Date fromDate = sdf.parse(from);
-                Date toDate = new Date(sdf.parse(to).getTime() + 86400000L - 1);
-                totalRevenue = orderRepo.getRevenueBetween(fromDate, toDate);
-            } else if (from != null && !from.isEmpty()) {
-                totalRevenue = orderRepo.getRevenueFrom(sdf.parse(from));
-            } else if (to != null && !to.isEmpty()) {
-                totalRevenue = orderRepo.getRevenueTo(new Date(sdf.parse(to).getTime() + 86400000L - 1));
-            } else {
-                totalRevenue = orderRepo.getTotalRevenue();
-            }
-
-            result.put("totalRevenue", totalRevenue);
-            result.put("completedOrders", orderRepo.countByStatus("SUCCESS"));
-            result.put("pendingOrders", orderRepo.countByStatus("PENDING"));
-            result.put("failedOrders", orderRepo.countByStatus("FAILED"));
-        } catch (Exception e) {
-            result.put("error", "Định dạng ngày không hợp lệ (yyyy-MM-dd)");
-        }
+        Date[] bounds = resolveDateBounds(from, to, period);
+        List<Order> scopedOrders = orderRepo.findFiltered(bounds[0], bounds[1], null);
+        long totalRevenue = scopedOrders.stream().filter(order -> "SUCCESS".equals(order.getStatus()))
+                .mapToLong(Order::getTotalPrice).sum();
+        result.put("totalRevenue", totalRevenue);
+        result.put("completedOrders", scopedOrders.stream().filter(order -> "SUCCESS".equals(order.getStatus())).count());
+        result.put("pendingOrders", scopedOrders.stream().filter(order -> "PENDING".equals(order.getStatus())).count());
+        result.put("reviewOrders", scopedOrders.stream().filter(order -> "REVIEW".equals(order.getStatus())).count());
+        result.put("failedOrders", scopedOrders.stream().filter(order -> "FAILED".equals(order.getStatus())).count());
 
         return ResponseEntity.ok(result);
+    }
+
+    @GetMapping("/revenue/trend")
+    public ResponseEntity<?> getRevenueTrend(
+            @RequestParam(defaultValue = "ALL") String period,
+            @RequestParam(required = false) String from,
+            @RequestParam(required = false) String to,
+            @RequestParam(defaultValue = "DAY") String granularity) {
+        Date[] bounds = resolveDateBounds(from, to, period);
+        boolean byMonth = "MONTH".equalsIgnoreCase(granularity);
+        java.time.ZoneId zone = java.time.ZoneId.systemDefault();
+        java.time.format.DateTimeFormatter keyFormatter = java.time.format.DateTimeFormatter
+                .ofPattern(byMonth ? "yyyy-MM" : "yyyy-MM-dd");
+        java.time.format.DateTimeFormatter labelFormatter = java.time.format.DateTimeFormatter
+                .ofPattern(byMonth ? "MM/yyyy" : "dd/MM");
+        java.util.Map<String, Long> totals = new java.util.TreeMap<>();
+        for (Order order : orderRepo.findFiltered(bounds[0], bounds[1], null)) {
+            if (!"SUCCESS".equals(order.getStatus())) continue;
+            java.time.LocalDate date = order.getCreatedAt().toInstant().atZone(zone).toLocalDate();
+            String key = byMonth ? date.withDayOfMonth(1).format(keyFormatter) : date.format(keyFormatter);
+            totals.merge(key, order.getTotalPrice().longValue(), Long::sum);
+        }
+        List<String> labels = totals.keySet().stream()
+                .map(key -> java.time.LocalDate.parse(key + (byMonth ? "-01" : ""))
+                        .format(labelFormatter))
+                .toList();
+        return ResponseEntity.ok(Map.of("labels", labels, "amounts", totals.values()));
+    }
+
+    private static String normalizeRoleFilter(String roleFilter) {
+        return "ADMIN".equalsIgnoreCase(roleFilter) ? "ADMIN"
+                : "USER".equalsIgnoreCase(roleFilter) ? "USER" : "ALL";
+    }
+
+    /** Khoảng thời gian chọn sẵn để Admin không phải nhập ngày thủ công. */
+    private static Date[] getPeriodBounds(String rawPeriod) {
+        String period = rawPeriod == null ? "ALL" : rawPeriod.toUpperCase();
+        java.util.Calendar start = java.util.Calendar.getInstance();
+        java.util.Calendar end = java.util.Calendar.getInstance();
+        if ("ALL".equals(period)) return new Date[] { null, null };
+        start.set(java.util.Calendar.HOUR_OF_DAY, 0); start.set(java.util.Calendar.MINUTE, 0); start.set(java.util.Calendar.SECOND, 0); start.set(java.util.Calendar.MILLISECOND, 0);
+        end.set(java.util.Calendar.HOUR_OF_DAY, 23); end.set(java.util.Calendar.MINUTE, 59); end.set(java.util.Calendar.SECOND, 59); end.set(java.util.Calendar.MILLISECOND, 999);
+        if ("MONTH".equals(period)) start.set(java.util.Calendar.DAY_OF_MONTH, 1);
+        else if ("QUARTER".equals(period)) { start.set(java.util.Calendar.MONTH, (start.get(java.util.Calendar.MONTH) / 3) * 3); start.set(java.util.Calendar.DAY_OF_MONTH, 1); }
+        else if ("YEAR".equals(period)) { start.set(java.util.Calendar.MONTH, java.util.Calendar.JANUARY); start.set(java.util.Calendar.DAY_OF_MONTH, 1); }
+        return new Date[] { start.getTime(), end.getTime() };
+    }
+
+    /** Ưu tiên khoảng ngày do UI tính từ năm/tháng/tuần; vẫn giữ period cho API cũ. */
+    private static Date[] resolveDateBounds(String from, String to, String period) {
+        if ((from == null || from.isBlank()) && (to == null || to.isBlank())) return getPeriodBounds(period);
+        try {
+            SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd");
+            sdf.setLenient(false);
+            Date start = from == null || from.isBlank() ? null : sdf.parse(from);
+            Date end = to == null || to.isBlank() ? null
+                    : new Date(sdf.parse(to).getTime() + 86400000L - 1);
+            return new Date[] { start, end };
+        } catch (java.text.ParseException e) {
+            throw new IllegalArgumentException("Khoảng ngày không hợp lệ", e);
+        }
     }
 
     // ============ THỐNG KÊ CHI TIẾT (MỞ RỘNG) ============
